[gd_scene load_steps=3 format=3 uid="uid://fruit_slice_game"]

[ext_resource type="Script" path="res://scenes/game.gd" id="1_game"]
[ext_resource type="PackedScene" uid="uid://game_ui_template" path="res://scenes/game_ui.tscn" id="2_ui"]

[node name="Game" type="Node2D"]
script = ExtResource("1_game")

[node name="Background" type="ColorRect" parent="."]
offset_right = 720.0
offset_bottom = 1280.0
color = Color(0.2, 0.12, 0.08, 1)

[node name="FruitsContainer" type="Node2D" parent="."]

[node name="SliceTrail" type="Line2D" parent="."]
width = 8.0
default_color = Color(1, 1, 1, 0.8)

[node name="LivesLabel" type="Label" parent="."]
offset_left = 20.0
offset_top = 150.0
offset_right = 300.0
offset_bottom = 200.0
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_font_sizes/font_size = 32
text = "Lives: ❤❤❤"

[node name="GameUI" parent="." instance=ExtResource("2_ui")]

[node name="Instructions" type="Label" parent="."]
offset_left = 60.0
offset_top = 1150.0
offset_right = 660.0
offset_bottom = 1230.0
theme_override_colors/font_color = Color(0.7, 0.6, 0.5, 1)
theme_override_font_sizes/font_size = 22
text = "SWIPE TO SLICE - AVOID BOMBS!"
horizontal_alignment = 1
